# dem_0000_saa

./: .env.example  .gitignore  APPLY_AND_VALIDATE(2).md  APPLY_AND_VALIDATE.md  FILE_MANIFEST.md  README.md  SOURCE_STATE_AUDIT.md  VALIDATION_REPORT.md  alembic.ini  apply_agent_native_workplace_resources.py  apply_angular_phase0_contracts.py  apply_angular_phase0_contracts_v2.py  apply_angular_phase1_foundation.py  apply_angular_phase1_foundation_v2.py  apply_angular_phase2_design_system.py  apply_angular_phase3_shell_and_phase2_hardening.py  apply_angular_phase4_conversation.py  apply_final_workplace_workflows.py  apply_nucleus_admin_control.py  apply_nucleus_gateway_boundary.py  apply_nucleus_multi_resource_preconditions.py  apply_phase5_durable_agent_runs_sse.py  apply_phase6_governed_action_control_plane.py  apply_workplace_resource_runtime.py  pyproject.toml  workplace_sandbox.db.bak_premigrate
alembic/: README  env.py
app/: __init__.py  agent_run_worker.py  main.py
docs/: AGENT_NATIVE_RESOURCES.md  AGENT_RUNS_SSE.md  AGENT_TOOL_CONTRACTS.md  ARCHITECTURE.md  GOVERNED_ACTION_CONTROL_PLANE.md  NUCLEUS_SCHEMA_MAPPING.md  ORGANIZATION_API_CONTRACTS.md  SECURITY_MODEL.md  TEST_USER1_CUTOVER.md  WORKPLACE_REQUIREMENTS.md  WORKPLACE_WORKFLOWS.md
frontend/: .gitignore  README.md  angular.json  eslint.config.mjs  package-lock.json  package.json  playwright.config.ts  proxy.conf.json  tsconfig.e2e.json  tsconfig.json
patch_extracted/: APPLY_TEST_USER1_PATCH.md  apply_test_user1_replacement.py
scratch/: diag_agent_run.py  diag_schema.py  repro_create_run.py  repro_order.py  repro_real_create.py  test_run.py
scripts/: __init__.py  map_legacy_users_to_test_user1.py  validate_angular_phase1.py  validate_angular_phase2.py  validate_angular_phase3.py  validate_angular_phase4.py  validate_frontend_contracts.py  (+2 more)
(+540 files in other folders)
